Improved loading of minified url, popup can now have styling

--- a/popup.html
+++ b/popup.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Get TinyURL popup</title>
+    <script src=popup.js></script>
   </head>
-   <script src=popup.js>
- </script>
   <body>
+    <b>TinyURL:</b>
+    <p id="URLHere">Loading...</p>
   </body>
  
  </html>
